discussion/kv_engine/183324/183324_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-53053: Make ItemPager a base class

Made ItemPager a base class and named the implementation that only
evicts from a single bucket StrictQuotaItemPager (because the quota is
what is strictly what is set for that bucket).

This will facilitate code reuse between the single-bucket and
cross-bucket implementations.

Change-Id: I9d1664d05811c448d4b8ec285f23a36cf2dbce81

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Vesko Karaganev
Date: 2022-11-28 22:58:13.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-11-29 01:04:36.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43042/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/item_pager_factory.h:28:5:
error: use of undeclared identifier "std"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43042/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21991/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/item_pager_factory.cc:25:51: error: out-of-line definition of "getItemPager" does not match any declaration in "ItemPagerFactory" [clang-diagnostic-error]
std::shared_ptr<NotifiableTask> ItemPagerFactory::getItemPager(
                                                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/item_pager_factory.h:28:5: error: use of undeclared identifier "std" [clang-diagnostic-error]
    std::shared_ptr<NotifiableTask> getItemPager(KVBucket& store);
    ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21991/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/item_pager_factory.cc:25:51:
error: out-of-line definition of "getItemPager" does not match any declaration in "ItemPagerFactory" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21991/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51276/ : FAILURE

Failure of GoogleTest "TransportProtocols/RangeScanTest.ErrorNMVB/McbpSsl_XattrYes_JsonYes_SnappyYes":

<pre>
[ RUN      ] TransportProtocols/RangeScanTest.ErrorNMVB/McbpSsl_XattrYes_JsonYes_SnappyYes
C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/tests/testapp/testapp_range_scan.cc(617): error: Expected equality of these values:
  cb::mcbp::Status::KeyEnoent
    Which is: Not found
  resp.getStatus()
    Which is: Success
[  FAILED  ] TransportProtocols/RangeScanTest.ErrorNMVB/McbpSsl_XattrYes_JsonYes_SnappyYes, where GetParam() = (McbpSsl, XattrYes, 4-byte object <00-00 00-00>, 4-byte object <00-00 00-00>) (22 ms)
TransportProtocols/RangeScanTest.ErrorNMVB/McbpSsl_XattrYes_JsonYes_SnappyYes
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51276/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23517/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23517/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/749/ : FAILURE

Failure of GoogleTest "ThrottleTest.OpsAreThrottled":

<pre>
[ RUN      ] ThrottleTest.OpsAreThrottled
[2022-11-28T23:16:56.727Z] /home/couchbase/jenkins/workspace/kv_engine.linux-debug_master/kv_engine/tests/testapp_serverless/throttle_test.cc:55: Failure
[2022-11-28T23:16:56.727Z] Expected: (3) <= (stats["num_throttled"]), actual: 3 vs 2
[2022-11-28T23:16:56.727Z] [  FAILED  ] ThrottleTest.OpsAreThrottled (4009 ms)
ThrottleTest.OpsAreThrottled
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/749/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11717/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">1 warnings</a> found. ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11717/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25303/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">1 warnings</a> found. ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25303/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32454/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32454/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21493/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11807/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24450/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24037/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
